# mandalang

./: CMakeLists.txt  README.md  main.cpp
include/: configure.hpp
include/mandalang/: code_fragment.hpp  engine.hpp  error_info.hpp  evaluator.hpp  function.hpp  ir.hpp  loader.hpp  mod.hpp  parser.hpp  resolver.hpp  scanner.hpp  scope.hpp  stack_frame.hpp  token.hpp  type.hpp  type_solver.hpp
include/mandalang/modules/: prelude.hpp
include/nonstd/: memory_pool.hpp
include/tl/: expected.hpp  optional.hpp
